--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "web"]
 	path = web
-	url = git@github.com:xh-dev-go/https-github.com-xh-dev-go-sun-ferry-timetable-fetcher-web.git
+	url = git@github.com:xh-dev-go/sun-ferry-timetable-fetcher-web.git
